--- a/basicoJava/build.gradle
+++ b/basicoJava/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+//    id 'checkstyle'
+    id 'pmd'
 }
 
 group 'com.orgfree.valdo'
@@ -16,4 +18,17 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+//checkstyle {
+//    toolVersion = '8.41.1'
+//    showViolations = true
+//    configFile = file("config/checkstyle/checkstyle.xml")
+//}
+
+pmd {
+    ruleSetFiles = files("config/pmd/ruleset.xml")
+    toolVersion = '6.33.0'
+    ignoreFailures = true
+    consoleOutput = true
 }
