--- a/basicoJava/build.gradle
+++ b/basicoJava/build.gradle
@@ -18,7 +18,10 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.20'
 
     // https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
-    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+//    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.31.Final'
 
 }
 
