--- a/basicoJava/build.gradle
+++ b/basicoJava/build.gradle
@@ -21,7 +21,17 @@ dependencies {
 //    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
 
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
-    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.31.Final'
+//    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.12.Final'
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '6.0.0.Alpha8'
+
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
+    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.31.Final'
+
+
+
+
+
 
 }
 
